...
            "state": "translated",
            "value": "Подяки"
          }
        }
      }
    },
    "Add": {
      "localizations": {
        "uk": {
          "stringUnit": {
            "state": "translated",
            "value": "Додати"
          }
...
            "state": "translated",
            "value": "Видалити категорію"
          }
        }
      }
    },
    "Delete Expense": {
      "localizations": {
        "uk": {
          "stringUnit": {
            "state": "translated",
            "value": "Видалити витрату"
          }
...
            "state": "translated",
            "value": "Редагування категорії"
          }
        }
      }
    },
    "Edit Expense": {
      "localizations": {
        "uk": {
          "stringUnit": {
            "state": "translated",
            "value": "Редагування"
          }
...
            "state": "translated",
            "value": "Перше списання"
          }
        }
      }
    },
    "Food": {
      "localizations": {
        "uk": {
          "stringUnit": {
            "state": "translated",
            "value": "Їжа"
          }
...
            "state": "translated",
            "value": "Не фіскальний чек"
          }
        }
      }
    },
    "Note": {
      "localizations": {
        "uk": {
          "stringUnit": {
            "state": "translated",
            "value": "Нотатка"
          }
...
            "state": "translated",
            "value": "Транспорт"
          }
        }
      }
    },
    "Undo": {
      "localizations": {
        "uk": {
          "stringUnit": {
            "state": "translated",
            "value": "Відмінити"
          }
...
